.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:52:53 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'delayRead':
../Core/Src/main.c:178:9: warning: switch condition has boolean value [-Wswitch-bool]
  178 |         switch (delay->running) {
      |         ^~~~~~
../Core/Src/main.c:200:1: warning: control reaches end of non-void function [-Wreturn-type]
  200 | }
      | ^
arm-none-eabi-gcc -o "Practica2_P3.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/godo/Documentos/GitHub/Curso_PdM_UBA/Practica2_P3/STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica2_P3.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica2_P3.elf
 
arm-none-eabi-size   Practica2_P3.elf 
arm-none-eabi-objdump -h -S  Practica2_P3.elf  > "Practica2_P3.list"
   text	   data	    bss	    dec	    hex	filename
   5920	     40	   1584	   7544	   1d78	Practica2_P3.elf
Finished building: default.size.stdout
 
Finished building: Practica2_P3.list
 
22:53:08 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-size   Practica2_P3.elf 
   text	   data	    bss	    dec	    hex	filename
   5920	     40	   1584	   7544	   1d78	Practica2_P3.elf
Finished building: default.size.stdout
 
22:54:07 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-size   Practica2_P3.elf 
   text	   data	    bss	    dec	    hex	filename
   5920	     40	   1584	   7544	   1d78	Practica2_P3.elf
Finished building: default.size.stdout
 
22:56:20 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'delayRead':
../Core/Src/main.c:178:9: warning: switch condition has boolean value [-Wswitch-bool]
  178 |         switch (delay->running) {
      |         ^~~~~~
../Core/Src/main.c:200:1: warning: control reaches end of non-void function [-Wreturn-type]
  200 | }
      | ^
arm-none-eabi-gcc -o "Practica2_P3.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/godo/Documentos/GitHub/Curso_PdM_UBA/Practica2_P3/STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica2_P3.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica2_P3.elf
 
arm-none-eabi-size   Practica2_P3.elf 
arm-none-eabi-objdump -h -S  Practica2_P3.elf  > "Practica2_P3.list"
   text	   data	    bss	    dec	    hex	filename
   5920	     32	   1584	   7536	   1d70	Practica2_P3.elf
Finished building: default.size.stdout
 
Finished building: Practica2_P3.list
 
22:58:31 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'delayRead':
../Core/Src/main.c:180:9: warning: switch condition has boolean value [-Wswitch-bool]
  180 |         switch (delay->running) {
      |         ^~~~~~
../Core/Src/main.c:202:1: warning: control reaches end of non-void function [-Wreturn-type]
  202 | }
      | ^
arm-none-eabi-gcc -o "Practica2_P3.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/godo/Documentos/GitHub/Curso_PdM_UBA/Practica2_P3/STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica2_P3.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica2_P3.elf
 
arm-none-eabi-size   Practica2_P3.elf 
arm-none-eabi-objdump -h -S  Practica2_P3.elf  > "Practica2_P3.list"
   text	   data	    bss	    dec	    hex	filename
   5900	     32	   1584	   7516	   1d5c	Practica2_P3.elf
Finished building: default.size.stdout
 
Finished building: Practica2_P3.list
 
23:00:22 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:68:67: error: 'delay500ms' undeclared here (not in a function); did you mean 'delay100ms'?
   68 |                                                         {LED3_Pin,delay500ms}
      |                                                                   ^~~~~~~~~~
      |                                                                   delay100ms
../Core/Src/main.c: In function 'delayRead':
../Core/Src/main.c:180:9: warning: switch condition has boolean value [-Wswitch-bool]
  180 |         switch (delay->running) {
      |         ^~~~~~
../Core/Src/main.c:202:1: warning: control reaches end of non-void function [-Wreturn-type]
  202 | }
      | ^
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
23:00:38 **** Incremental Build of configuration Debug for project Practica2_P3 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'delayRead':
../Core/Src/main.c:180:9: warning: switch condition has boolean value [-Wswitch-bool]
  180 |         switch (delay->running) {
      |         ^~~~~~
../Core/Src/main.c:202:1: warning: control reaches end of non-void function [-Wreturn-type]
  202 | }
      | ^
arm-none-eabi-gcc -o "Practica2_P3.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/godo/Documentos/GitHub/Curso_PdM_UBA/Practica2_P3/STM32F401RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Practica2_P3.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Practica2_P3.elf
 
arm-none-eabi-size   Practica2_P3.elf 
arm-none-eabi-objdump -h -S  Practica2_P3.elf  > "Practica2_P3.list"
   text	   data	    bss	    dec	    hex	filename
   5900	     32	   1584	   7516	   1d5c	Practica2_P3.elf
Finished building: default.size.stdout
 
Finished building: Practica2_P3.list
 
